syntax = "proto3";


package wether;

option go_package = "/protos";


service Weather{
    rpc GetCurrentWeather(time) returns(weather){}
    rpc GetWeatherForecast(day) returns(weather){}
    rpc ReportWeatherCondition(weather) returns(status){}
}

message time{
    string time = 1;
}

message weather{
    string weath = 1;
    int32 temperature = 2;
    int32 damp = 3;
    int32 wind = 4;
    string t = 5;
    string day = 6;
}

message day{
    string day = 1;
}

message status{
    bool status = 1;
}